packages/webassemblyjs/test/fixtures/type-errors/add-mixed-operators/module.wast
(module 
  (func
    (i32.add (i64.const 0) (f32.const 0))
  )
)
